# PEC

./: .clasp.json  .gitignore  AGENTS.md  CHECKLIST_OPERATIVO_VISOR_PEC.md  Index.html  PEC_indice_maestro_plantilla.csv  README.md  guia-rapida-visor-pec-dgppcs.html  index.html  panel-drive-pec.html  panel_alerta_actividades_edt.html  pec_tracking_data.js  pec_tracking_data.json  visor_seguimiento_pec.html
.agents/: SKILL_ROUTING.md
.agents/skills/legend-pec-orchestrator-v2.2/: SKILL.md
.agents/skills/pec-frontend-ux/: SKILL.md
apps_script/: Code.gs  Index.html  README.md  Visor.html  appsscript.json
apps_script/apps_script/: PEC_indice_maestro (1).xlsx
docs/: AUDITORIA_PERMISOS_CARGA_SUSTENTOS_VISOR_PEC.md  LEGEND_PRODUCT_GOVERNANCE.md  MATRIZ_PERMISOS_VISOR_PEC.md  PLAN_MEJORA_INTEGRAL_VISOR_PEC.md  RACI_VISOR_PEC.md  ROADMAP_EJECUTIVO_VISOR_PEC.md
tools/: extract_pec_tracking.py  validate_visor_layout.ps1  validate_visor_layout_playwright.js
wastewater-research-360/: .gitignore  README.md  pyproject.toml
wastewater-research-360/app/: __init__.py  main.py
wastewater-research-360/app/api/routes/: jobs.py  research.py
wastewater-research-360/app/core/: __init__.py  config.py  enums.py
wastewater-research-360/app/models/: job.py  research.py
wastewater-research-360/app/pipelines/: __init__.py
wastewater-research-360/app/pipelines/research_wastewater/: __init__.py  runner.py  stages.py
wastewater-research-360/app/services/: job_service.py  store.py
wastewater-research-360/tools/wastewater_research_360/: __init__.py  run_wastewater_research.py
(+20 files in other folders)
