[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wastewater-research-360"
version = "0.1.0"
description = "Independent job runner scaffold for PTAR Puno technical research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0"
]

[project.scripts]
run-wastewater-research = "tools.wastewater_research_360.run_wastewater_research:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tools*"]
